# upwoof-listings-python-client

./: .gitignore  LICENSE  README.md  pylint_report.txt  pyproject.toml  swagger.json
tests/: test_client.py  test_integration.py  test_uw_listing_cms_apps_dsl.py
upwoof_listings/: __init__.py  client.py  errors.py
upwoof_listings/dsl/: __init__.py  accommodation_types.py  accommodations.py  animal_types.py  breeds.py  credit_notes.py  customers.py  invoices.py  listings.py  orders.py  pets.py  reservations.py  users.py  uw_listing_cms_apps.py
upwoof_listings/resources/: __init__.py  accommodation.py  accommodation_type.py  animal_type.py  breed.py  credit_note.py  customer.py  invoice.py  listing.py  object.py  order.py  pet.py  reservation.py  user.py  uw_listing_cms_app.py
