[project]
name = "upwoof-listings-python-client"
version = "0.1.0"
description = "A Python client for the UpWoof v1 API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Junie", email = "junie@jetbrains.com" }
]
dependencies = [
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.18.0",
]
dev = [
    "pylint>=4.0.0",
]

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "C0103", # invalid-name (naming styles like api_key vs API_KEY)
    "W0212", # protected-access (needed for the Singleton implementation in __init__.py)
    "C0415", # import-outside-toplevel
    "R0903", # too-few-public-methods
    "R0901", # too-many-ancestors (due to DSL class inheritance structure)
    "E1101", # no-member (request member in DSL mixins, provided by Client)
    "R0401", # cyclic-import (between upwoof_listings and its submodules)
]

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
